Fix formatting and white space word break in code snippets.

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -153,6 +153,7 @@
         font-size: 0.9em;
         margin: 0 0.25em;
         padding: 0.25em 0.65em;
+        word-break: break-word;
     }
 
     pre {
